fix(overflow-menu): increase z-index, resolves #160

--- a/src/components/reusable/overflowMenu/overflowMenu.scss
+++ b/src/components/reusable/overflowMenu/overflowMenu.scss
@@ -43,7 +43,7 @@ button {
   background: var(--kd-color-background-ui-default);
   overflow: hidden;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 4px;
-  z-index: 10;
+  z-index: 20;
   transition: transform 150ms ease-out, opacity 150ms ease-out,
     visibility 150ms ease-out;
   opacity: 0;
